@@ -6,7 +6,7 @@
 .\" Public License for copying conditions.  There is NO warranty.
 .\"
 .\" $Id$
-.TH NANO 1 "version 1.3.7" "March 26, 2005"
+.TH NANO 1 "version 1.3.7" "May 16, 2005"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 
@@ -15,7 +15,7 @@ nano \- Nano's ANOther editor, an enhanced free Pico clone
 
 .SH SYNOPSIS
 .B nano
-.I [\+LINE]\ [options]\ [file]
+.I [\+LINE,COLUMN]\ [options]\ [file]
 .br
 
 .SH DESCRIPTION
@@ -32,9 +32,9 @@ replace" and "go to line number".
 
 .SH OPTIONS
 .TP
-.B \+\fILINE\fP
-Places cursor at line number \fILINE\fP on startup, instead of the
-default of line 1.
+.B \+\fILINE\fP,\fICOLUMN\fP]
+Places cursor at line number \fILINE\fP and column number \fICOLUMN\fP
+on startup, instead of the default of line 1, column 1.
 .TP
 .B \-?
 Same as \fB-h (\-\-help)\fP.
