@@ -13,6 +13,10 @@ CVS code -
 	  nanogetstr(), and do_statusbar_input(). (DLR)
 	- Update the Free Software Foundation's mailing address in
 	  various comments. (DLR)
+	- Add the ability to open a file on a specified column as well
+	  as a specified line, by allowing an argument of the form
+	  +LINE,COLUMN.  Changes to main(), nano.1, and nano.texi. (DLR,
+	  suggested by PFTank)
 - cut.c:
   cut_line()
 	- Set placewewant properly after cutting a line, to avoid a
